// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`output golden — table snapshots > adaptive-ashrae produces stable table output 1`] = `
{
  "charts": [
    {
      "instanceId": "adaptive-ashrae-boundary",
      "layoutTitle": "Adaptive (ASHRAE-55) Comfort Chart",
      "profileKind": "compliance",
      "traceCount": 7,
      "traceNames": [
        "Tooltip Layer",
        "Input 1",
      ],
      "xAxisTitle": "Prevailing mean outdoor temperature (°C)",
      "yAxisTitle": "Operative temperature (°C)",
    },
  ],
  "modelId": "adaptive-ashrae",
  "table": {
    "sections": [
      {
        "cells": [
          {
            "color": "#047857",
            "text": "Compliant",
          },
        ],
        "title": "Compliance",
      },
      {
        "cells": [
          {
            "color": "#047857",
            "subtext": "20.5 ~ 27.5 °C",
            "text": "80% Acceptability",
          },
        ],
        "title": "80% Acceptability",
      },
      {
        "cells": [
          {
            "color": "#047857",
            "subtext": "21.5 ~ 26.5 °C",
            "text": "90% Acceptability",
          },
        ],
        "title": "90% Acceptability",
      },
    ],
  },
}
`;

exports[`output golden — table snapshots > adaptive-en produces stable table output 1`] = `
{
  "charts": [
    {
      "instanceId": "adaptive-en-boundary",
      "layoutTitle": "Adaptive (EN 16798-1) Comfort Chart",
      "profileKind": "compliance",
      "traceCount": 9,
      "traceNames": [
        "Tooltip Layer",
        "Input 1",
      ],
      "xAxisTitle": "Running mean outdoor temperature (°C)",
      "yAxisTitle": "Operative temperature (°C)",
    },
  ],
  "modelId": "adaptive-en",
  "table": {
    "sections": [
      {
        "cells": [
          {
            "color": "#047857",
            "text": "Compliant",
          },
        ],
        "title": "Compliance",
      },
      {
        "cells": [
          {
            "color": "#047857",
            "subtext": "22.4 ~ 27.4 °C",
            "text": "Category I",
          },
        ],
        "title": "Category I",
      },
      {
        "cells": [
          {
            "color": "#047857",
            "subtext": "21.4 ~ 28.4 °C",
            "text": "Category II",
          },
        ],
        "title": "Category II",
      },
      {
        "cells": [
          {
            "color": "#047857",
            "subtext": "20.4 ~ 29.4 °C",
            "text": "Category III",
          },
        ],
        "title": "Category III",
      },
    ],
  },
}
`;

exports[`output golden — table snapshots > heat-index produces stable table output 1`] = `
{
  "charts": [
    {
      "instanceId": "heat-index-ranges",
      "layoutTitle": "Heat Index Ranges",
      "profileKind": "explore",
      "traceCount": 4,
      "traceNames": [
        "Boundaries",
        "Input 1",
      ],
      "xAxisTitle": "Relative humidity (%)",
      "yAxisTitle": "Air temperature (°C)",
    },
    {
      "instanceId": "heat-index-dynamic-field",
      "layoutTitle": "Heat Index Dynamic Chart — Heat Index",
      "profileKind": "explore",
      "traceCount": 4,
      "traceNames": [
        "Boundaries",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Relative humidity (%)",
    },
  ],
  "modelId": "heat-index",
  "table": {
    "sections": [
      {
        "cells": [
          {
            "color": "#475569",
            "subtext": "Safe",
            "text": "26.0 °C",
          },
        ],
        "title": "Heat Index",
      },
    ],
  },
}
`;

exports[`output golden — table snapshots > humidex produces stable table output 1`] = `
{
  "charts": [
    {
      "instanceId": "humidex-ranges",
      "layoutTitle": "Humidex Discomfort",
      "profileKind": "explore",
      "traceCount": 4,
      "traceNames": [
        "Boundaries",
        "Input 1",
      ],
      "xAxisTitle": "Relative humidity (%)",
      "yAxisTitle": "Air temperature (°C)",
    },
    {
      "instanceId": "humidex-dynamic-field",
      "layoutTitle": "Humidex Dynamic Chart — Humidex",
      "profileKind": "explore",
      "traceCount": 4,
      "traceNames": [
        "Boundaries",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Relative humidity (%)",
    },
  ],
  "modelId": "humidex",
  "table": {
    "sections": [
      {
        "cells": [
          {
            "color": "#475569",
            "subtext": "Little/None",
            "text": "29.8",
          },
        ],
        "title": "Humidex",
      },
    ],
  },
}
`;

exports[`output golden — table snapshots > phs-2023 produces stable table output 1`] = `
{
  "charts": [
    {
      "instanceId": "phs-exposure-history",
      "layoutTitle": "PHS exposure history",
      "profileKind": "compliance",
      "traceCount": 4,
      "traceNames": [
        "Rectal temperature",
        "Core temperature",
        "Maximum rectal temperature",
        "Input 1",
      ],
      "xAxisTitle": "Time (hours)",
      "yAxisTitle": "Temperature (°C)",
    },
    {
      "instanceId": "phs-exposure-history",
      "layoutTitle": "PHS exposure history",
      "profileKind": "explore",
      "traceCount": 4,
      "traceNames": [
        "Rectal temperature",
        "Core temperature",
        "Editable rectal-temperature threshold",
        "Input 1",
      ],
      "xAxisTitle": "Time (hours)",
      "yAxisTitle": "Temperature (°C)",
    },
    {
      "instanceId": "phs-dynamic-field",
      "layoutTitle": "PHS Dynamic Chart — Limiting exposure time",
      "profileKind": "compliance",
      "traceCount": 4,
      "traceNames": [
        "Boundaries",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Relative humidity (%)",
    },
    {
      "instanceId": "phs-dynamic-field",
      "layoutTitle": "PHS Dynamic Chart — Rectal temperature after 8 h",
      "profileKind": "explore",
      "traceCount": 4,
      "traceNames": [
        "Boundaries",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Relative humidity (%)",
    },
  ],
  "modelId": "phs-2023",
  "table": {
    "sections": [
      {
        "cells": [
          {
            "text": "8.00 h",
          },
        ],
        "group": "Maximum allowable exposure time",
        "title": "Rectal-temperature exposure limit",
      },
      {
        "cells": [
          {
            "text": "8.00 h",
          },
        ],
        "group": "Maximum allowable exposure time",
        "title": "Water-loss exposure limit",
      },
      {
        "cells": [
          {
            "subtext": "No limit reached before 8 h",
            "text": "8.00 h",
          },
        ],
        "group": "Maximum allowable exposure time",
        "title": "Earliest limiting criterion",
      },
      {
        "cells": [
          {
            "text": "37.1 °C",
          },
        ],
        "group": "End-of-exposure state",
        "title": "Rectal temperature after 8 h",
      },
      {
        "cells": [
          {
            "text": "0.30 kg",
          },
        ],
        "group": "End-of-exposure state",
        "title": "Predicted water loss after 8 h",
      },
    ],
  },
}
`;

exports[`output golden — table snapshots > pmv-ashrae produces stable table output 1`] = `
{
  "charts": [
    {
      "instanceId": "pmv-ashrae-psychrometric",
      "layoutTitle": "PMV (ASHRAE-55) Psychrometric Chart — PMV",
      "profileKind": "compliance",
      "traceCount": 19,
      "traceNames": [
        "Supersaturated region mask",
        "RH 10%",
        "RH 20%",
        "RH 30%",
        "RH 40%",
        "RH 50%",
        "RH 60%",
        "RH 70%",
        "RH 80%",
        "RH 90%",
        "RH 100%",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Humidity ratio (g/kg)",
    },
    {
      "instanceId": "pmv-ashrae-psychrometric",
      "layoutTitle": "PMV (ASHRAE-55) Psychrometric Chart — PMV",
      "profileKind": "explore",
      "traceCount": 27,
      "traceNames": [
        "Supersaturated region mask",
        "RH 10%",
        "RH 20%",
        "RH 30%",
        "RH 40%",
        "RH 50%",
        "RH 60%",
        "RH 70%",
        "RH 80%",
        "RH 90%",
        "RH 100%",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Humidity ratio (g/kg)",
    },
    {
      "instanceId": "pmv-ashrae-dynamic-field",
      "layoutTitle": "PMV (ASHRAE-55) Dynamic Chart — PMV",
      "profileKind": "compliance",
      "traceCount": 7,
      "traceNames": [
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Relative humidity (%)",
    },
    {
      "instanceId": "pmv-ashrae-dynamic-field",
      "layoutTitle": "PMV (ASHRAE-55) Dynamic Chart — PMV",
      "profileKind": "explore",
      "traceCount": 15,
      "traceNames": [
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Relative humidity (%)",
    },
    {
      "instanceId": "pmv-ashrae-heat-loss",
      "layoutTitle": "Heat Loss Components",
      "profileKind": "compliance",
      "traceCount": 11,
      "traceNames": [
        "Water vapor diffusion through the skin - Latent",
        "Evaporation of sweat from skin surface - Latent",
        "Respiration - Latent",
        "Respiration - Sensible",
        "Radiation from clothing surface - Sensible",
        "Convection from clothing surface - Sensible",
        "Total latent",
        "Total sensible",
        "Total heat loss",
        "Metabolic rate",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Heat Loss (W/m²)",
    },
    {
      "instanceId": "pmv-ashrae-heat-loss",
      "layoutTitle": "Heat Loss Components",
      "profileKind": "explore",
      "traceCount": 11,
      "traceNames": [
        "Water vapor diffusion through the skin - Latent",
        "Evaporation of sweat from skin surface - Latent",
        "Respiration - Latent",
        "Respiration - Sensible",
        "Radiation from clothing surface - Sensible",
        "Convection from clothing surface - Sensible",
        "Total latent",
        "Total sensible",
        "Total heat loss",
        "Metabolic rate",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Heat Loss (W/m²)",
    },
    {
      "instanceId": "pmv-ashrae-set",
      "layoutTitle": "SET outputs",
      "profileKind": "compliance",
      "traceCount": 12,
      "traceNames": [
        "SET temperature",
        "Skin temperature",
        "Core temperature",
        "Mean body temperature",
        "Total skin evaporative heat loss",
        "Sweat evaporation skin heat loss",
        "Vapour diffusion skin heat loss",
        "Total skin sensible heat loss",
        "Total skin heat loss",
        "Heat loss respiration",
        "Skin wettedness",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Temperature (°C)",
    },
    {
      "instanceId": "pmv-ashrae-set",
      "layoutTitle": "SET outputs",
      "profileKind": "explore",
      "traceCount": 12,
      "traceNames": [
        "SET temperature",
        "Skin temperature",
        "Core temperature",
        "Mean body temperature",
        "Total skin evaporative heat loss",
        "Sweat evaporation skin heat loss",
        "Vapour diffusion skin heat loss",
        "Total skin sensible heat loss",
        "Total skin heat loss",
        "Heat loss respiration",
        "Skin wettedness",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Temperature (°C)",
    },
  ],
  "modelId": "pmv-ashrae",
  "table": {
    "sections": [
      {
        "cells": [
          {
            "color": "#047857",
            "text": "Compliant",
          },
        ],
        "title": "Compliance",
      },
      {
        "cells": [
          {
            "text": "0.24",
          },
        ],
        "title": "PMV",
      },
      {
        "cells": [
          {
            "color": "#475569",
            "text": "Neutral",
          },
        ],
        "title": "Zone",
      },
      {
        "cells": [
          {
            "text": "6.2%",
          },
        ],
        "title": "PPD",
      },
      {
        "cells": [
          {
            "text": "93.8%",
          },
        ],
        "title": "Acceptability",
      },
      {
        "cells": [
          {
            "text": "24.8 °C",
          },
        ],
        "title": "SET",
      },
      {
        "cells": [
          {
            "text": "0.00 °C",
          },
        ],
        "title": "Cooling effect",
      },
      {
        "cells": [
          {
            "text": "0.10 m/s",
          },
        ],
        "title": "Relative air speed",
      },
      {
        "cells": [
          {
            "text": "0.50 clo",
          },
        ],
        "title": "Dynamic clothing",
      },
    ],
  },
}
`;

exports[`output golden — table snapshots > pmv-iso produces stable table output 1`] = `
{
  "charts": [
    {
      "instanceId": "pmv-iso-psychrometric",
      "layoutTitle": "PMV (ISO 7730 Category B) Psychrometric Chart — PMV",
      "profileKind": "compliance",
      "traceCount": 19,
      "traceNames": [
        "Supersaturated region mask",
        "RH 10%",
        "RH 20%",
        "RH 30%",
        "RH 40%",
        "RH 50%",
        "RH 60%",
        "RH 70%",
        "RH 80%",
        "RH 90%",
        "RH 100%",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Humidity ratio (g/kg)",
    },
    {
      "instanceId": "pmv-iso-psychrometric",
      "layoutTitle": "PMV (ISO 7730 Category B) Psychrometric Chart — PMV",
      "profileKind": "explore",
      "traceCount": 27,
      "traceNames": [
        "Supersaturated region mask",
        "RH 10%",
        "RH 20%",
        "RH 30%",
        "RH 40%",
        "RH 50%",
        "RH 60%",
        "RH 70%",
        "RH 80%",
        "RH 90%",
        "RH 100%",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Humidity ratio (g/kg)",
    },
    {
      "instanceId": "pmv-iso-dynamic-field",
      "layoutTitle": "PMV (ISO 7730 Category B) Dynamic Chart — PMV",
      "profileKind": "compliance",
      "traceCount": 7,
      "traceNames": [
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Relative humidity (%)",
    },
    {
      "instanceId": "pmv-iso-dynamic-field",
      "layoutTitle": "PMV (ISO 7730 Category B) Dynamic Chart — PMV",
      "profileKind": "explore",
      "traceCount": 15,
      "traceNames": [
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Relative humidity (%)",
    },
    {
      "instanceId": "pmv-iso-heat-loss",
      "layoutTitle": "Heat Loss Components",
      "profileKind": "compliance",
      "traceCount": 11,
      "traceNames": [
        "Water vapor diffusion through the skin - Latent",
        "Evaporation of sweat from skin surface - Latent",
        "Respiration - Latent",
        "Respiration - Sensible",
        "Radiation from clothing surface - Sensible",
        "Convection from clothing surface - Sensible",
        "Total latent",
        "Total sensible",
        "Total heat loss",
        "Metabolic rate",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Heat Loss (W/m²)",
    },
    {
      "instanceId": "pmv-iso-heat-loss",
      "layoutTitle": "Heat Loss Components",
      "profileKind": "explore",
      "traceCount": 11,
      "traceNames": [
        "Water vapor diffusion through the skin - Latent",
        "Evaporation of sweat from skin surface - Latent",
        "Respiration - Latent",
        "Respiration - Sensible",
        "Radiation from clothing surface - Sensible",
        "Convection from clothing surface - Sensible",
        "Total latent",
        "Total sensible",
        "Total heat loss",
        "Metabolic rate",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Heat Loss (W/m²)",
    },
    {
      "instanceId": "pmv-iso-set",
      "layoutTitle": "SET outputs",
      "profileKind": "compliance",
      "traceCount": 12,
      "traceNames": [
        "SET temperature",
        "Skin temperature",
        "Core temperature",
        "Mean body temperature",
        "Total skin evaporative heat loss",
        "Sweat evaporation skin heat loss",
        "Vapour diffusion skin heat loss",
        "Total skin sensible heat loss",
        "Total skin heat loss",
        "Heat loss respiration",
        "Skin wettedness",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Temperature (°C)",
    },
    {
      "instanceId": "pmv-iso-set",
      "layoutTitle": "SET outputs",
      "profileKind": "explore",
      "traceCount": 12,
      "traceNames": [
        "SET temperature",
        "Skin temperature",
        "Core temperature",
        "Mean body temperature",
        "Total skin evaporative heat loss",
        "Sweat evaporation skin heat loss",
        "Vapour diffusion skin heat loss",
        "Total skin sensible heat loss",
        "Total skin heat loss",
        "Heat loss respiration",
        "Skin wettedness",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Temperature (°C)",
    },
  ],
  "modelId": "pmv-iso",
  "table": {
    "sections": [
      {
        "cells": [
          {
            "color": "#047857",
            "text": "Compliant",
          },
        ],
        "title": "Compliance",
      },
      {
        "cells": [
          {
            "text": "0.24",
          },
        ],
        "title": "PMV",
      },
      {
        "cells": [
          {
            "color": "#475569",
            "text": "Neutral",
          },
        ],
        "title": "Zone",
      },
      {
        "cells": [
          {
            "text": "6.2%",
          },
        ],
        "title": "PPD",
      },
      {
        "cells": [
          {
            "text": "93.8%",
          },
        ],
        "title": "Acceptability",
      },
      {
        "cells": [
          {
            "text": "24.8 °C",
          },
        ],
        "title": "SET",
      },
      {
        "cells": [
          {
            "text": "0.00 °C",
          },
        ],
        "title": "Cooling effect",
      },
      {
        "cells": [
          {
            "text": "0.10 m/s",
          },
        ],
        "title": "Relative air speed",
      },
      {
        "cells": [
          {
            "text": "0.50 clo",
          },
        ],
        "title": "Dynamic clothing",
      },
    ],
  },
}
`;

exports[`output golden — table snapshots > utci produces stable table output 1`] = `
{
  "charts": [
    {
      "instanceId": "utci-stress-band",
      "layoutTitle": "UTCI stress category",
      "profileKind": "explore",
      "traceCount": 4,
      "traceNames": [
        "Boundaries",
        "Input 1",
      ],
      "xAxisTitle": "UTCI (°C)",
      "yAxisTitle": "",
    },
    {
      "instanceId": "utci-dynamic-field",
      "layoutTitle": "UTCI Dynamic Chart — UTCI",
      "profileKind": "explore",
      "traceCount": 4,
      "traceNames": [
        "Boundaries",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Relative humidity (%)",
    },
  ],
  "modelId": "utci",
  "table": {
    "sections": [
      {
        "cells": [
          {
            "text": "25.5 °C",
          },
        ],
        "title": "UTCI",
      },
      {
        "cells": [
          {
            "color": "#059669",
            "text": "No Thermal Stress",
          },
        ],
        "title": "Stress Category",
      },
    ],
  },
}
`;

exports[`output golden — table snapshots > wind-chill produces stable table output 1`] = `
{
  "charts": [
    {
      "instanceId": "wind-chill-dynamic-field",
      "layoutTitle": "Wind Chill Dynamic Chart — Wind Chill Index",
      "profileKind": "explore",
      "traceCount": 4,
      "traceNames": [
        "Boundaries",
        "Input 1",
      ],
      "xAxisTitle": "Air temperature (°C)",
      "yAxisTitle": "Wind speed (m/s)",
    },
  ],
  "modelId": "wind-chill",
  "table": {
    "sections": [
      {
        "cells": [
          {
            "color": "#0369a1",
            "subtext": "Safe",
            "text": "973 W/m²",
          },
        ],
        "title": "Wind Chill Index",
      },
      {
        "cells": [
          {
            "color": "#0369a1",
            "text": "-10.0 °C",
          },
        ],
        "title": "Wind Chill Temperature",
      },
    ],
  },
}
`;
